# arduino-linux-abstraction

./: .gitignore  CMakeLists.txt  README.md
src/: Arduino.cpp  Arduino.h  SD.cpp  SD.h
